# agent-loop

./: .gitignore  README.md  pyproject.toml
agent_loop/: .env.example  app.py  loop.py  parameters.py  prompt.py  rich_console.py
agent_loop/client/: openai.py
agent_loop/tools/: create_todos.py  mark_complete.py  tools.py
